# Cassiopeia

./: .codecov.yaml  .coveragerc  .gitignore  .pkl  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.RST  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  build.py  cas9_simulator.ipynb  codecov.yml  conftest.py  lg2_character_matrix.txt  meta.yaml  pyproject.toml  requirements.txt  sample_workflow.py  setup.py  test.py  test_script.py  version.py
.github/workflows/: .backfill.yaml  build.yaml  release.yaml  test.yaml  test.yml
Alex_Solver/: data_pipeline.py  sample_workflow_real_data.py  sample_workflow_simulated_data.py  setup.py
Alex_Solver/lineage_solver/: ILP_solver.py  greedy_solver.py  lineage_solver.py  solution_evaluation_metrics.py  solver_utils.c  solver_utils.py  solver_utils.pyx
Alex_Solver/simulation_tools/: dataset_generation.py  dataset_generation.pyx  simulation_utils.py  validation.py
Cassiopeia/: __init__.py  __main__.py
Cassiopeia/TreeSolver/: '  Cassiopeia_Tree.py  Node.py  __init__.py  compute_meta_purity.py  data_pipeline.py  matt_Test.py  post_process_tree.py  reconstruct_sim_tree.py  reconstruct_tree.py  sample_workflow_real_data.py  score_triplets.py  simulate_tree.py  stress_test.py  test_target_nodes.pkl  utilities.py
Matt_Simulations/: lineagegrp_config_ex.yaml
Matt_Simulations/process/: __main__.py  collapseFastq_UMI.py  filterMoleculeTables.py  lineageGroup.py  processBam2CountsAlleles10X.pl  processSam2MoleculeTable-PCT17.pl
Matt_Simulations/test/: test_error_corrections.py
ProcessingPipeline/: filter_config_ex.yaml  setup.py
ProcessingPipeline/process/: bam10X2fastq.pl  collapseBam2dataFrame.pl  consensusTable2fasta.pl  filterMoleculeTables.py  lineageGroup_utils.c
SingleCellLineageTracing/: __init__.py  post_process_tree.py  reconstruct_tree.py  stress_test.py
SingleCellLineageTracing/TreeSolver/: __init__.py  alleletable_processing.py  compute_meta_purity.py  data_pipeline.py  post_process_tree.py  reconstruct_tree.py  run_ivlt_solver.py  sample_workflow_real_data.py  sample_workflow_simulated_data.py  score_triplets.py  stress_test.py
TreeSolver/: _log.stdout  lg2_newick_hybrid.3000.txt  lg2_newick_hybrid.ALL.txt  log  setup.py  simulated_ivtl.pkl  simulated_meta.txt  test_newick.txt  test_reconstruction.pkl  test_target_nodes.pkl
TreeSolver/.ipynb_checkpoints/: compute_trees-checkpoint.sh
TreeSolver/lineage_solver/: .lineage_solver.py.swp  ILP_solver.py  solver_utils.c
cassiopeia/: __init__.py  __main__.py  config.ini  pl.py  pp.py  sim.py  tl.py
cassiopeia/ProcessingPipeline/: __init__.py
cassiopeia/TreeSolver/: Cassiopeia_Tree.py  Node.py  README.md  __init__.py  alg_utils.py  alternative_algorithms.py  compute_meta_purity.py  data_pipeline.py  post_process_tree.py  reconstruct_sim_tree.py  reconstruct_tree.py  sample_workflow_simulated_data.py  score_triplets.py  simulate_tree.py  utilities.c  utilities.html  utilities.py  utilities.pyx
cassiopeia/analysis/: __init__.py  reconstruct_states.py  small_parsimony.py
cassiopeia/critique/: __init__.py  compare.py  critique_utilities.py  phs.py
cassiopeia/critique_old/: compare.py  critique_utilities.py
cassiopeia/data/: CassiopeiaTree.py  Layers.py  LineageDataset.py  __init__.py  utilities.py
cassiopeia/mixins/: __init__.py  errors.py  logging.py  utilities.py  warnings.py
cassiopeia/model_selection/: BranchLengthEstimatorCV.py  (+3 more)
cassiopeia_lineage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: PCT48.ref.fasta  PCT48.ref.txt  ccphylo_config.ini  itolconfig_example  preprocess.cfg  preprocess_gestalt.cfg  preprocess_gestalt.cfg.txt  spatial_preprocess.cfg  test_at.txt  test_cm.txt
docs/: Cassiopeia.ProcessingPipeline.rst  Cassiopeia.TreeSolver.rst  Makefile  SingleCellLineageTracing.ProcessingPipeline.rst  SingleCellLineageTracing.TreeSolver.rst  conf.py  contributing.md  index.rst  installation.rst  references.rst  requirements.txt  user_guide.rst
lineage_solver/: lineage_solver.py  solution_evaluation_metrics.py  solver_utils.py
notebooks/: Continuous_Phylogeny_Sim.ipynb  E-greedy.ipynb  Heritable_scoring.ipynb  Mutation_summary_stats.ipynb  Tree_summary_stats.ipynb  Yule_simulations-updated.ipynb  benchmark.ipynb  benchmarking-Copy1.ipynb  ecDNA_sim_test.ipynb  ground_truth_testing_score.ipynb  ground_truth_testing_simulate.ipynb  ground_truth_testing_simulate_binary.ipynb  ground_truth_testing_simulate_cell_death.ipynb  ground_truth_testing_simulate_cell_death_bothdropouts.ipynb  ground_truth_testing_simulate_stochastic.ipynb  max_cut_split-Copy1.ipynb  max_cut_split-Copy2.ipynb  max_cut_split_spectral.ipynb  new_typewriter.ipynb  preprocess.ipynb  process_fastq.ipynb  reconstruct.ipynb  reconstruct_lineages.ipynb  simulate_and_stress_test.ipynb  simulate_ecDNA.ipynb  simulate_network_loop.ipynb  simulated_fitness.ipynb  spatial.ipynb  theoretical_analysis.ipynb  theoretical_anlaysis.ipynb
process/: extractBarcodes.pl
scripts/: .temp.txt  alleletable_2_charmat.py  alleletable_2_heatmap.py  binarize_multistate_charmat.py  calc_parsimony.R  compute_meta_chisq.py  compute_meta_purity.py  compute_sample_consistency.py  compute_tree_entropy.py  create_bootstrap.py  gestalt_reconstruct.py  lineageProfile_2_charmat.py  network_to_charmat.py  post_process_tree.py  reconstruct_tree.py  score_cci.py  score_parsimony_netx.py  score_triplets.py  shuffle_character_matrix.py  simulate_tree.py  stress_test.py  visualize_treeheatmap_general.R  visualize_treeheatmap_nested.R  visualize_treeheatmap_weissman.R
test/: align_sequence_test.py  call_alleles_test.py  call_lineage_groups_test.py  collapse_umi_test.py  config_parser_test.py  data.fastq  error_correct_umi_test.py  filter_alignments_test.py  filter_molecule_table_test.py  neighborjoining_solver_test.py  resolve_umi_sequence_test.py  test_error_corrections.py  test_reconstruction.py  testlog
tests/: reconstruct_lineages.ipynb  resolve_umi_sequence_test.py
(+665 files in other folders)
