[tool.poetry]
authors = ["Matthew Jones <mattjones315@berkeley.edu>", "Alex Khodaverdian", "Richard Zhang", "Sebastian Prillo", "Joseph Min"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Single Cell Lineage Reconstruction with Cas9-Enabled Lineage Recorders"
documentation = "https://cassiopeia-lineage.readthedocs.io/"
homepage = "https://github.com/YosefLab/Cassiopeia"
keywords = ['scLT']
license = "MIT"
name = "cassiopeia"
readme = 'README.md'
repository = "https://github.com/YosefLab/Cassiopeia"
version = "2.0.0"

include = [
  {path = "cassiopeia/preprocess/*.so", format = "wheel"},
  {path = "cassiopeia/preprocess/*.pyx", format = "wheel"},
  {path = "cassiopeia/solver/*.so", format = "wheel"},
  {path = "cassiopeia/solver/*.pyx", format = "wheel"},
  {path = "cassiopeia/tools/branch_length_estimator/*.so", format = "wheel"},
  {path = "cassiopeia/tools/branch_length_estimator/*.pyx", format = "wheel"},
]
packages = [
  {include = "cassiopeia"},
]

[tool.poetry.dependencies]
Biopython = ">=1.71"
PyYAML = ">=3.12"
black = {version = ">=20.8b1", optional = true}
bokeh = ">=0.12.15"
codecov = {version = ">=2.0.8", optional = true}
cvxpy = "*"
cython = ">=0.29.2"
ete3 = ">=3.1.1"
hits = "*"
importlib-metadata = {version = "^1.0", python = "<3.8"}
ipython = {version = ">=7.20", optional = true, python = ">=3.7"}
isort = {version = ">=5.7", optional = true}
itolapi = "*"
jupyter = {version = ">=1.0", optional = true}
matplotlib = ">=2.2.2"
nbconvert = ">=5.4.0"
nbformat = ">=4.4.0"
nbsphinx = {version = "*", optional = true}
nbsphinx-link = {version = "*", optional = true}
networkx = ">=2.5"
ngs-tools = ">=1.5.6"
numba = ">=0.51.0"
numpy = ">=1.19.5,<1.22"
pandas = ">=1.1.4"
parameterized = "*"
plotly = ">=5.0.0"
pre-commit = {version = ">=2.7.1", optional = true}
pydata-sphinx-theme = {version = ">=0.4.3", optional = true}
pysam = ">=0.14.1"
pyseq-align = ">=1.0.2"
pytest = {version = ">=4.4", optional = true}
python = ">=3.7,<4.0"
scanpydoc = {version = ">=0.5", optional = true}
scipy = ">=1.2.0"
sphinx = {version = ">=3.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-gallery = {version = ">0.6", optional = true}
tqdm = ">=4"
typing-extensions = ">=3.7.4"
typing_extensions = {version = "*", python = "<3.8", optional = true}

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.7", "Cython", "numpy>=1.19.5,<1.22", "setuptools"]

[tool.poetry.scripts]
cassiopeia-preprocess = 'cassiopeia.preprocess.cassiopeia_preprocess:main'

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "jupyter", "pre-commit", "isort"]
docs = [
  "sphinx",
  "scanpydoc",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "pydata-sphinx-theme",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx_gallery",
]
