[tool.poetry]
authors = ["Matthew Jones <mattjones315@berkeley.edu>", "Alex Khodaverdian", "Richard Zhang", "Sebastian Prillo", "Joseph Min"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Single Cell Lineage Reconstruction with Cas9-Enabled Lineage Recorders"
documentation = "https://cassiopeia-lineage.readthedocs.io/"
homepage = "https://github.com/YosefLab/Cassiopeia"
keywords = ['scLT']
license = "MIT"
name = "cassiopeia-lineage"
readme = 'README.md'
repository = "https://github.com/YosefLab/Cassiopeia"
version = "2.1.0"

include = [
  {path = "cassiopeia/preprocess/*.so", format = "wheel"},
  {path = "cassiopeia/preprocess/*.pyx", format = "wheel"},
  {path = "cassiopeia/solver/*.so", format = "wheel"},
  {path = "cassiopeia/solver/*.pyx", format = "wheel"},
  {path = "cassiopeia/tools/branch_length_estimator/*.so", format = "wheel"},
  {path = "cassiopeia/tools/branch_length_estimator/*.pyx", format = "wheel"},
  {path = "cassiopeia/config.ini"},
]
packages = [
  {include = "cassiopeia"},
]

[tool.poetry.dependencies]
anndata = ">=0.11.0"
Biopython = ">=1.71"
Cython = ">=3.0.6"
PyYAML = ">=3.12"
black = {version = ">=20.8b1", optional = true}
bokeh = ">=0.12.15"
cchardet = {version = ">=2.2.0", optional = true}
codecov = {version = ">=2.0.8", optional = true}
cvxpy = "*"
ecos = "*"
ete3 = ">=3.1.1"
hits = "*"
ipython = {version = ">=7.20", optional = true}
isort = {version = ">=5.7", optional = true}
itolapi = "*"
jupyter = {version = ">=1.0", optional = true}
matplotlib = ">=2.2.2"
nbconvert = {version = ">=5.4.0", optional = true}
nbformat = {version = ">=4.4.0", optional = true}
nbsphinx = {version = "*", optional = true}
nbsphinx-link = {version = "*", optional = true}
networkx = ">=3.1"
ngs-tools = ">=1.5.6"
numba = ">=0.51.0"
numpy = ">=1.22, <3.0"
opencv-python = {version = ">=4.5.4.60", optional = true}
pandas = ">=2.2.1"
parameterized = "*"
plotly = ">=5.0.0"
poisson-disc = {version = ">=0.2.1", optional = true}
pre-commit = {version = ">=2.7.1", optional = true}
pydata-sphinx-theme = {version = ">=0.4.3", optional = true}
pysam = ">=0.14.1"
pyseq-align = ">=1.0.2"
pytest = {version = ">=4.4", optional = true}
python = ">=3.10,<4.0"
pyvista = {version = ">=0.43.0", optional = true}
scanpydoc = {version = ">=0.5", optional = true}
scikit-image = {version = ">=0.19.1", optional = true}
scikit-learn = {version = ">=1.0.2", optional = true}
scipy = ">=1.2.0"
sphinx = {version = ">=3.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-gallery = {version = ">0.6", optional = true}
squidpy = ">=1.6.5"
trame = {version = ">=3.2.4", optional = true}
trame-vtk = {version = ">=2.5.8", optional = true}
trame-vuetify = {version = ">=2.3.1", optional = true}
tqdm = ">=4"
typing-extensions = ">=3.7.4"
typing_extensions = {version = "*", python = "<3.8", optional = true}
vtk = {version = "==9.3", optional = true}

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.7", "Cython>=3.0.6", "numpy>=1.19.5", "setuptools", "pip>=22.0.0"]

[tool.poetry.scripts]
cassiopeia-preprocess = 'cassiopeia.preprocess.cassiopeia_preprocess:main'

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "jupyter", "pre-commit", "isort"]
docs = [
  "sphinx",
  "scanpydoc",
  "nbconvert",
  "nbformat",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "pydata-sphinx-theme",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx_gallery"
]

spatial = [
  "Cython",
  "opencv-python",
  "poisson-disc",
  "vtk",
  "scikit-image", 
  "scikit-learn",
  "trame", 
  "trame-vuetify", 
  "trame-vtk", 
  "cchardet",
  "pyvista"
]
