[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "oldest-supported-numpy",
  "setuptools>=64",
  "wheel",
]

[project]
name = "cassiopeia-lineage"
version = "3.0.0"
description = "Single Cell Lineage Reconstruction with Cas9-Enabled Lineage Recorders"
readme = "README.md"
license = "MIT"
maintainers = [
  { name = "Matthew Jones", email = "mgjones@mit.edu" },
  { name = "William Colgan", email = "wcolgan@mit.edu" },
]
authors = [
  { name = "Matthew Jones" },
  { name = "William Colgan" },
  { name = "Alex Khodaverdian" },
  { name = "Richard Zhang" },
  { name = "Sebastian Prillo" },
  { name = "Joseph Min" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anndata>=0.11",
  "biopython>=1.71",
  "bokeh>=0.12.15",
  "cvxpy",
  "ecos",
  "ete3>=3.1.1",
  "hits",
  "itolapi",
  "matplotlib>=2.2.2",
  "networkx>=3.1",
  "ngs-tools>=1.5.6",
  "numba>=0.51",
  "numpy>=2",
  "pandas>=2.2.1",
  "parameterized",
  "pysam>=0.14.1",
  "pyseq-align>=1.0.2",
  "pyyaml>=3.12",
  "scipy>=1.2",
  "tqdm>=4",
  "typing-extensions>=3.7.4",
]

optional-dependencies.dev = [
  "cython>=3.0.6", # for regenerating .c from .pyx when releasing
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "nbsphinx",
  "nbsphinx-link",
  "pandas",
  "pandoc",
  "scanpydoc",
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.spatial = [
  "scikit-image>=0.19.1",
  "scikit-learn>=1.0.2",
  "squidpy>=1.6",
]
optional-dependencies.test = [
  "coverage>=7.10",
  "joblib",
  "pytest",
  "pytest-cov",
]
# URLs
urls.Documentation = "https://cassiopeia-lineage.readthedocs.io/"
urls.Homepage = "https://cassiopeia-lineage.readthedocs.io/"

# --- setuptools: src/ layout + discovery ---
urls.Source = "https://github.com/YosefLab/Cassiopeia"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [ "src" ]
include = [ "cassiopeia*" ]
exclude = [ "tests*", "docs*", "notebooks*", "data*" ]

# If you ship .pxd, include them:
[tool.setuptools.package-data]
cassiopeia = [ "**/*.pxd" ]

# --- Hatch envs ---

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.hatch.envs.hatch-test]
features = [ "dev", "test" ]
skip-install = false

# Matrix entries for hatch-test
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.10", "3.12" ]

[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.12" ]

[tool.hatch.envs.hatch-test.overrides]
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

# --- Ruff / Pytest / Coverage ---

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [ "B", "BLE", "C4", "D", "E", "F", "I", "RUF100", "TID", "UP", "W" ]
lint.ignore = [ "B008", "D100", "D104", "D105", "D107", "D203", "D213", "D400", "D401", "E501", "E731", "E741" ]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [ "--import-mode=importlib" ]
pythonpath = [ "src" ]

[tool.coverage.run]
source = [ "cassiopeia" ]
omit = [ "**/test_*.py" ]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
]
